--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,14 @@ group = "0.12.0"
 hex = "0.4.3"
 num-bigint-dig = { version = "0.8.1", features = ["prime"] }
 proptest = "1.0.0"
+rand = "0.8.5"
 rand_chacha = "0.3.1"
 sha2 = "0.10.6"
 subtle = "2.4.1"
+test-strategy = "0.2.1"
+
+[lib]
+path = "src/lib.rs"
 
 [profile.dev]
 opt-level = 3
@@ -24,5 +29,5 @@ strip = false
 criterion = "0.4.0"
 
 [[bench]]
-name = "prime_rand"
+name = "main"
 harness = false
