--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,28 +2,34 @@
 name = "ecc-acc-bls-test"
 version = "0.1.0"
 edition = "2021"
+lto = true
+opt-level = 3
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bls12_381 = { version = "0.7.0", features = ["experimental"] }
+digest = "0.10.6"
 ff = "0.12.0"
 group = "0.12.0"
 hex = "0.4.3"
 num-bigint-dig = { version = "0.8.1", features = ["prime"] }
+num-integer = "0.1.45"
+num-traits = "0.2.15"
 proptest = "1.0.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 sha2 = "0.10.6"
+sha3 = "0.10.6"
 subtle = "2.4.1"
 test-strategy = "0.2.1"
 
 [lib]
 path = "src/lib.rs"
 
-[profile.dev]
-opt-level = 3
-strip = false
+# [profile.dev]
+# opt-level = 3
+# strip = false
 
 [dev-dependencies]
 criterion = "0.4.0"
