--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ hex = "0.4.3"
 num-bigint-dig = { version = "0.8.1", features = ["prime"] }
 num-integer = "0.1.45"
 num-traits = "0.2.15"
+prime_factorization = "1.0.3"
 proptest = "1.0.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
